[GLAM-672] Added `white-space: nowrap` to prevent text wrapping and ensure full breadcrumb text display.

--- a/src/app/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/breadcrumbs/breadcrumbs.component.scss
@@ -14,6 +14,7 @@ li.breadcrumb-item {
 }
 
 .breadcrumb-item-limiter {
+  white-space: nowrap;
   display: inline-block;
   max-width: var(--ds-breadcrumb-max-length);
   > * {
